# catgirl-engine

./: .android.sh  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  Cargo.toml  License.md  ReadMe.md  build-all.sh  build-android.sh  build.rs  build.sh  catgirl-engine.AppImage.zsync  check.sh  clean.sh  crowdin.yml  deny.toml  deny.toml.old  docs.sh  format.sh  icons.sh  initialize.sh  install-tools.sh  mobile.toml  precommit-autoupdate.sh  publish.sh  reset.sh  setup.sh  version.sh
.build-scripts/check/: pre-commit.sh
.build-scripts/exports/: tools.sh
.build-scripts/install/: butler.sh  pre-commit.sh  rust-android.sh  rust-appimage.sh  rust-linux.sh  rust-wasm.sh  rust-windows.sh  rust.sh
.build_scripts/check/: pre-commit.sh
.build_scripts/install/: butler.sh  pre-commit.sh  rust-android.sh  rust-appimage.sh  rust-linux.sh  rust-wasm.sh  rust-windows.sh  rust.sh
.cargo/: config.toml  config.toml.sample
.github/: FUNDING.yml  pull_request_template.md
.github/site/: Gemfile  _config.yml  index.md
.github/workflows/: build-android.yml  build-android.yml.disabled  build-darwin-fat.yml  build-darwin-fat.yml.disabled  build-gh-pages.yml  build-linux-debian-musl.yml  build-linux-debian-original.yml.disabled  build-linux-debian.yml  build-linux-glibc.yml  build-linux-gnu-aarch64.yml  build-linux-gnu-x86_64-appimage.yml  build-linux-gnu-x86_64.yml  build-linux-musl-x86_64.yml  build-linux-musl-x86_64.yml.disabled  build-linux-musl.yml  build-linux-musl.yml.disabled  build-linux-simple.yml  build-linux.yml  build-test.yml  build-wasm32-unknown-unknown.yml  build-webassembly-emscripten-32.yml  build-webassembly-emscripten-32.yml.disabled  build-webassembly-emscripten.yml  build-webassembly-wbindgen-32.yml  build-windows-gnu-x86_64.yml  codeberg-mirror.yml  forgejo-mirror.yml  mirror-to-codeberg.yml  mirror-to-forgejo.yml  publish-crates-io.yml  publish-to-repositories.yml
.scripts/: android.sh  build.sh  setup.sh
.toolchains/: TC-apple-darwin.cmake  TC-gnu-gcc-aarch64.cmake  TC-gnu-gcc-x86-64.cmake  TC-gnu-gcc.cmake  TC-mingw-gcc-x86_64.cmake  TC-musl-gcc-x86-64.cmake  TC-musl-gcc.cmake  musl-x86_64.cmake
android/: .gitignore  build.gradle  build.gradle.kts  gradle.properties  gradlew.bat  local.properties.sample  settings.gradle  settings.gradle.kts
android-project/: local.properties
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt  SDL
android/app/: build.gradle  proguard-rules.pro
android/app/jni/: Application.mk  CMakeLists.txt
android/app/jni/src/: CMakeLists.txt
android/app/jni/toolchains/: TC-musl-gcc.cmake
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: binding  mapping.txt
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/jni/: Android.mk
android/fastlane/: Appfile  Fastfile  report.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: ReadMe.md
c/: browser.c  emscripten.c
client/: Cargo.toml  ReadMe.md  build.rs  catgirl-engine.desktop
client/assets/resources/: ReadMe.md
client/resources/: ReadMe.md
client/src/: game_loop.rs  lib.rs  shader.wgsl
client/src/assets/: mod.rs
client/src/game/: game_loop.rs  mod.rs
client/src/render/: mod.rs
client/src/render/fps/: mod.rs
client/src/resources/: mod.rs
client/src/test/: mod.rs
client/src/window/: mod.rs  window_state.rs
client/src/window/events/: mod.rs
client/src/window/web/: mod.rs
common/: Cargo.toml  ReadMe.md  build.rs
common/src/: lib.rs
common/src/resources/: mod.rs
docs/: .gitignore  CNAME  Gemfile  _config.yml  build.sh  clean.sh  index.md  run.sh
docs/assets/css/: style.scss
examples/binding/c/: build.sh  main.c  run.sh
examples/binding/cpp/: build.sh  main.cpp  run.sh
examples/binding/python/: .gitignore  ReadMe.md  build.sh  catgirl_engine.pxd  catgirl_engine.pyx  clean.sh  main.py  run.sh  setup.py
examples/osx/disk_image/catgirl-engine.app/Contents/: Info.plist
examples/wasm/web/: .gitignore  ReadMe.md  build.sh  clean.sh  index.html  manifest.json  run.sh  service-worker.js.template
examples/web/: .gitignore  build.sh  index.html  start.py
helper/: clean.sh
macros/: Cargo.toml  ReadMe.md  build.rs
macros/src/: lib.rs
resources/: ReadMe.md
resources/appimage/usr/share/applications/: land.catgirl.engine.desktop
resources/appimage/usr/share/metainfo/: catgirl-engine.appdata.xml  land.catgirl.engine.appdata.xml
resources/assets/: ReadMe.md
resources/linux/install/: game-engine.desktop
resources/locales/: pl.toml
server/: Cargo.toml  ReadMe.md  build.rs
server/src/: game_loop.rs  lib.rs  setup.rs
server/src/game/: game_loop.rs  mod.rs
server/src/game/game_loop/: mod.rs
server/src/test/: mod.rs
src/: game.rs  lib.rs  main.rs  physics.rs  render.rs  setup.rs  utility.rs
src/android/: bridge.rs
src/assets/: mod.rs
src/client/: browser.rs  game_loop.rs  mod.rs
src/common/: game_loop.rs  mod.rs
src/common/physics/: mod.rs
src/game/: entity.rs  game_loop.rs  physics.rs  render.rs
src/game/entity/: entity.rs  player.rs
src/loggers/: browser.rs
src/resources/: mod.rs
src/server/: mod.rs
src/start/: mod.rs
src/start/android/: mod.rs
src/start/desktop/: mod.rs
src/start/web/: mod.rs
src/test/: mod.rs
src/utility/: browser.rs  emscripten.rs
utils/: Cargo.toml  ReadMe.md  build.rs
utils/src/: lib.rs  setup.rs
utils/src/args/: mod.rs
utils/src/args/c_abi/: mod.rs
utils/src/args/desktop/: mod.rs
utils/src/args/desktop/generic/: mod.rs
utils/src/args/desktop/linux/: mod.rs
utils/src/args/generic/: mod.rs
utils/src/args/linux/: mod.rs
utils/src/assets/: mod.rs
utils/src/environment/: mod.rs
utils/src/exit/: mod.rs
utils/src/i18n/: mod.rs
utils/src/macros/: mod.rs
utils/src/macros/assets/: mod.rs
utils/src/resources/: mod.rs
utils/src/string/: mod.rs
wasm_threads/: Cargo.toml  ReadMe.md  build.rs
wasm_threads/src/: lib.rs
wasm_threads/src/thread/: mod.rs
web/: index.html
(+30 files in other folders)
