[package]
name = "catgirl-engine"
description = "A game engine for cool moddability and procedurally generated data"
license = "Zlib"
version = "0.9.4"  # https://semver.org (Do not use 1.0.0 until first production release)
keywords = ["catgirl", "engine", "gamedev", "game"]
categories = ["game-engines"]
repository = "https://github.com/lexi-the-cute/catgirl-engine.git"
documentation = "https://docs.rs/catgirl-engine"
homepage = "https://github.com/lexi-the-cute/catgirl-engine"
readme = "ReadMe.md"
authors = ["Alexis <@alexis@foxgirl.land>"]  # <@user@server> is a Fedi Address
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "main"
crate-type = ["cdylib", "rlib"]  # cdylib - C Compatible Lib, rlib - Rust Lib

# Optimize for faster build times
[profile.dev]
lto = false
debug = true
opt-level = 0
incremental = true
codegen-units = 256

# Optimize for speed and remove debug information for size
[profile.release]
lto = true
debug = false  # Setting to false significantly reduces code size (last test was 286 MB to 13 MB)
opt-level = 3
incremental = false

[features]
default = ["client", "server"]
client = ["dep:client"]
server = ["dep:server"]
tracing-subscriber = ["dep:tracing-subscriber"]

# Used for customizing building of docs.rs binary
[package.metadata.docs.rs]
features = ["default"]

[workspace]
members = [
    "client",
    "server"
]

[build-dependencies]
build-info-build = { version = "^0.0.35", default-features = false }
cc = { version = "~1.0", default-features = false }
cbindgen = { version = "~0", default-features = false }

[dependencies]
client = { version = "0.2.0", package = "catgirl-engine-client", path = "client", optional = true }
server = { version = "0.2.0", package = "catgirl-engine-server", path = "server", optional = true }
build-info = { version = "^0.0.35", default-features = false, features = ["runtime"] }
cfg-if = { version = "~1", default-features = false }
pretty_env_logger = { version = "~0", default-features = false }
tracing = { version = "~0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "~0.3", default-features = false, optional = true }
clap = { version = "~4", features = ["derive"] }

[target.'cfg(any(target_family="unix", target_family="windows"))'.dependencies]
ctrlc = { version = "~3", default-features = false }

[target.'cfg(target_os="android")'.dependencies]
android_logger = { version = "~0.13", default-features = false }
winit = { version = "~0.29", default-features = false, features = ["android-game-activity"] }

[target.'cfg(target_family="wasm")'.dependencies]
console_error_panic_hook = { version = "~0.1", default-features = false }
console_log = { version = "~1", default-features = false }
wasm-bindgen = { version = "~0.2", default-features = false }
wasm-bindgen-futures = { version = "^0.4.40", default-features = false }
web-sys = { version = "~0.3", default-features = false, features = ["Document", "Window", "Element"] }
getrandom = { version = "~0.2", default-features = false, features = ["js"] }
