[package]
name = "catgirl-engine-client"
description = "Client side part of the catgirl-engine crate"
license = "Zlib"
version = "0.12.27"
keywords = ["catgirl", "engine", "gamedev", "game"]
categories = ["game-engines"]
repository = "https://github.com/lexi-the-cute/catgirl-engine.git"
documentation = "https://docs.rs/catgirl-engine-client"
homepage = "https://github.com/lexi-the-cute/catgirl-engine"
readme = "ReadMe.md"
authors = ["Alexis <@alexis@foxgirl.land>"]  # <@user@server> is a Fedi Address
edition = "2021"

[features]
default = []
appimage = []

# Used for customizing building of docs.rs binary
[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--document-private-items", "--default-theme=ayu"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu", "wasm32-unknown-unknown",
            "aarch64-linux-android", "armv7-linux-androideabi",
            "i686-linux-android", "x86_64-linux-android"]

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
unused_self = "allow"
struct_excessive_bools = "allow"

[build-dependencies]
build-info-build = { version = "^0.0.36", default-features = false }

[dependencies]
build-info = { version = "^0.0.36", default-features = false, features = ["runtime"] }
utils = { version = "0.12.27", package = "catgirl-engine-utils", path = "../utils" }
wasm-bindgen = { version = "~0.2", default-features = true }
tracing = { version = "~0.1", default-features = false, features = ["log"] }
winit = { version = "~0.29" }
wgpu = { version = "~0.19", default-features = false }
image = { version = "~0.24" }
# egui = { version = "~0.26" }
# egui-wgpu = { version = "~0.26" }

[target.'cfg(not(target_family="wasm"))'.dependencies]
wgpu = { version = "~0.19", default-features = true, features = ["fragile-send-sync-non-atomic-wasm"] }
futures = { version = "~0.3", default-features = false, features = ["executor"] }

[target.'cfg(target_os="android")'.dependencies]
winit = { version = "~0.29", features = ["android-game-activity"] }

[target.'cfg(target_family="wasm")'.dependencies]
wgpu = { version = "~0.19", default-features = false, features = ["webgl", "fragile-send-sync-non-atomic-wasm"] }
wasm-bindgen-futures = { version = "~0.4", default-features = false }
futures-channel = { version = "~0.3", default-features = false }
web-sys = { version = "~0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"]}
