# Disabled until issues with compiling with no_mangle resolved on WASM
# cargo-features = ["edition2024"]

[package]
name = "catgirl-engine-client"
description = "Client side part of the catgirl-engine crate"
license = "Zlib"
version = "0.14.26"
keywords = ["catgirl", "engine", "gamedev", "game"]
categories = ["game-engines"]
repository = "https://github.com/foxgirl-labs/catgirl-engine.git"
documentation = "https://docs.rs/catgirl-engine-client"
homepage = "https://github.com/foxgirl-labs/catgirl-engine"
readme = "ReadMe.md"
authors = ["Alexis <@alexis@foxgirl.land>"]  # <@user@server> is a Fedi Address
edition = "2021"

[features]
default = []
appimage = []

# Used for customizing building of docs.rs binary
[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--document-private-items", "--default-theme=ayu"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu", "wasm32-unknown-unknown",
            "aarch64-linux-android", "armv7-linux-androideabi",
            "i686-linux-android", "x86_64-linux-android"]

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
unused_self = "allow"
struct_excessive_bools = "allow"

[build-dependencies]
build-info-build = { version = "^0.0.39", default-features = false, features = ["git"] }

[dependencies]
build-info = { version = "^0.0.39", default-features = false, features = ["runtime"] }
utils = { version = "0.14.26", package = "catgirl-engine-utils", path = "../utils" }
wasm-bindgen = { version = "~0.2", default-features = true }
tracing = { version = "~0.1", default-features = false, features = ["log"] }
winit = { version = "~0.30", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-csd-adwaita"] }
wgpu = { version = "~23", default-features = false }
image = { version = "~0.25" }
# egui = { version = "~0.26" }
# egui-wgpu = { version = "~0.26" }

[target.'cfg(not(target_env="musl"))'.dependencies]
winit = { version = "~0.30", default-features = true }

[target.'cfg(not(target_family="wasm"))'.dependencies]
wgpu = { version = "~23", default-features = true, features = ["fragile-send-sync-non-atomic-wasm"] }
futures = { version = "~0.3", default-features = false, features = ["executor"] }

[target.'cfg(target_os="android")'.dependencies]
winit = { version = "~0.30", default-features = true, features = ["android-game-activity"] }
jni = { version = "~0.21", default-features = false }

[target.'cfg(target_family="wasm")'.dependencies]
wgpu = { version = "~23", default-features = false, features = ["webgpu", "webgl", "fragile-send-sync-non-atomic-wasm"] }
wasm-bindgen-futures = { version = "~0.4", default-features = false }
futures-channel = { version = "~0.3", default-features = false }
web-sys = { version = "~0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"]}
