# Disabled until issues with compiling with no_mangle resolved on WASM
# cargo-features = ["edition2024"]

[package]
name = "catgirl-engine-macros"
description = "Procedural macro crate for the catgirl-engine crate"
license = "Zlib"
version = "0.14.40"
keywords = ["catgirl", "engine", "gamedev", "game"]
categories = ["game-engines"]
repository = "https://github.com/foxgirl-labs/catgirl-engine.git"
documentation = "https://docs.rs/catgirl-engine-macros"
homepage = "https://github.com/foxgirl-labs/catgirl-engine"
readme = "ReadMe.md"
authors = ["Alexis <@alexis@fearness.org>"]  # <@user@server> is a Fedi Address
edition = "2021"
resolver = "2"

[lib]
# doc generation disabled until cargo bug is fixed. https://github.com/rust-lang/cargo/issues/10368#issuecomment-1776114335
doc = false
proc-macro = true

[features]
default = []
embed-assets = []

# Used for customizing building of docs.rs binary
[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--document-private-items", "--default-theme=ayu"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu", "wasm32-unknown-unknown",
            "aarch64-linux-android", "armv7-linux-androideabi",
            "i686-linux-android", "x86_64-linux-android"]

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
unused_self = "allow"
struct_excessive_bools = "allow"

[dependencies]
common = { version = "0.14.40", package = "catgirl-engine-common", path = "../common" }
syn = { version = "~2" }
quote = { version = "~1" }  # Replace with proc_macro::quote!(...) when stable
serde = { version = "~1.0", default-features = false }
serde_json = { version = "~1.0", default-features = false, features = ["alloc"] }
