[package]
name = "catgirl-engine-server"
description = "Server side part of the catgirl-engine crate"
license = "Zlib"
version = "0.2.0"
keywords = ["catgirl", "engine", "gamedev", "game"]
categories = ["game-engines"]
repository = "https://github.com/lexi-the-cute/catgirl-engine.git"
documentation = "https://docs.rs/catgirl-engine-server"
homepage = "https://github.com/lexi-the-cute/catgirl-engine"
readme = "ReadMe.md"
authors = ["Alexis <@alexis@foxgirl.land>"]  # <@user@server> is a Fedi Address
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "~0.1", default-features = false, features = ["log"] }
rhai = { version = "~1", default-features = false, features = ["serde"] }
