[package]
name = "catgirl-engine-utils"
description = "Utility crate for the catgirl-engine crate"
license = "Zlib"
version = "0.12.25"
keywords = ["catgirl", "engine", "gamedev", "game"]
categories = ["game-engines"]
repository = "https://github.com/lexi-the-cute/catgirl-engine.git"
documentation = "https://docs.rs/catgirl-engine-utils"
homepage = "https://github.com/lexi-the-cute/catgirl-engine"
readme = "ReadMe.md"
authors = ["Alexis <@alexis@foxgirl.land>"]  # <@user@server> is a Fedi Address
edition = "2021"

[features]
default = []
appimage = []
no_lint = []  # Tells rust-analyzer to can it with false warnings when workspace config is used

# Used for customizing building of docs.rs binary
[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--document-private-items", "--default-theme=ayu"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu", "wasm32-unknown-unknown",
            "aarch64-linux-android", "armv7-linux-androideabi",
            "i686-linux-android", "x86_64-linux-android"]

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
unused_self = "allow"

[build-dependencies]
build-info-build = { version = "^0.0.36", default-features = false }

[dependencies]
tracing = { version = "~0.1", default-features = false, features = ["log"] }
build-info = { version = "^0.0.36", default-features = false, features = ["runtime"] }
clap = { version = "~4", features = ["derive"] }
wasm-bindgen = { version = "~0.2", default-features = true }
