# Disabled until issues with compiling with no_mangle resolved on WASM
# cargo-features = ["edition2024"]

[package]
name = "catgirl-engine-utils"
description = "Utility crate for the catgirl-engine crate"
license = "Zlib"
version = "0.14.35"
keywords = ["catgirl", "engine", "gamedev", "game"]
categories = ["game-engines"]
repository = "https://github.com/Foxgirl-Labs/catgirl-engine.git"
documentation = "https://docs.rs/catgirl-engine-utils"
homepage = "https://github.com/Foxgirl-Labs/catgirl-engine"
readme = "ReadMe.md"
authors = ["Alexis <@alexis@foxgirl.land>"]  # <@user@server> is a Fedi Address
edition = "2021"
resolver = "2"

[features]
default = []
appimage = []

# Used for customizing building of docs.rs binary
[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--document-private-items", "--default-theme=ayu"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu", "wasm32-unknown-unknown",
            "aarch64-linux-android", "armv7-linux-androideabi",
            "i686-linux-android", "x86_64-linux-android"]

[lints.clippy]
missing_docs_in_private_items = "warn"
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
unused_self = "allow"
struct_excessive_bools = "allow"

[build-dependencies]
build-info-build = { version = "~0.0.39", default-features = false, features = ["git"] }

[dependencies]
macros = { version = "0.14.35", package = "catgirl-engine-macros", path = "../macros" }
tracing = { version = "~0.1", default-features = false, features = ["log"] }
build-info = { version = "~0.0.39", default-features = false, features = ["runtime"] }
clap = { version = "~4", features = ["derive"] }
wasm-bindgen = { version = "~0.2", default-features = true }
