[package]
name = "wasm_threads"
description = "A helper crate to catgirl-engine for facilitating Web Worker/SharedArrayBuffer threads on WebAssembly"
license = "Zlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
